--- a/package.json
+++ b/package.json
@@ -20,6 +20,24 @@
     "swiper": "^8.1.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-intl": "^5.25.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
+    "react-spinners": "^0.11.0",
+    "react-tsparticles": "^2.1.3",
+    "react-typical": "^0.1.3",
+    "swiper": "^8.1.4",
+    "web-vitals": "^2.1.4"
+  },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
